syntax = "proto3";
option go_package = "pb";

import "google/protobuf/any.proto";

message Message {
    Type type                   = 1;
    google.protobuf.Any payload = 2;
    int32 requestId             = 3; // optional
    bool isResponse             = 4; // optional

    enum Type {
        PING = 0;
        PONG = 1;

        CAFE_ACK             = 50;
        CAFE_CHALLENGE       = 51;
        CAFE_NONCE           = 52;
        CAFE_REGISTRATION    = 53;
        CAFE_SESSION         = 54;
        CAFE_REFRESH_SESSION = 55;
        CAFE_STORE           = 56;
        CAFE_BLOCK           = 57;
        CAFE_BLOCKLIST       = 58;
        CAFE_STORED          = 59;
        CAFE_ADD_THREAD      = 60;
        CAFE_REMOVE_THREAD   = 61;
        CAFE_UPDATE_THREAD   = 62;

        THREAD_INVITE          = 100;
        THREAD_EXTERNAL_INVITE = 101;
        THREAD_JOIN            = 102;
        THREAD_LEAVE           = 103;
        THREAD_DATA            = 104;
        THREAD_ANNOTATION      = 105;
        THREAD_IGNORE          = 200;
        THREAD_MERGE           = 201;

        ERROR                  = 500;
    }
}

message Envelope {
    Message message = 1;
    bytes pk        = 2;
    bytes sig       = 3;
}

message Error {
    uint32 code    = 1;
    string message = 2;
}
